--- a/style.css
+++ b/style.css
@@ -1,4 +1,40 @@
 body{
-    background-color:grey;
+    background-color: grey;
+    margin: 0px;
+    padding: 0px;
 }
 
+header{
+    background-color: aliceblue;
+    padding: 30px 0px 30px 0px;
+    box-sizing: border-box;
+}
+
+h1{
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
+.calculatorBody{
+    width: 600px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+/* ---- calculator BUttons */
+
+#screen{
+    background-color: bisque;
+    width: 600px;
+    height: 30px;
+}
+
+button{
+    width:80px;
+    height: 80px;
+}
