--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
 }
 
 header{
-    background-color: aliceblue;
+    background-color: ;
     padding: 30px 0px 30px 0px;
     box-sizing: border-box;
 }
@@ -27,14 +27,42 @@ h1{
 
 }
 /* ---- calculator BUttons */
+.screen{
+    b
+}
 
-#screen{
+#ac{
+    height: 500px
+}
+.num{
+    height: 500px;
+    width: 300px;
+}
+
+input{
     background-color: bisque;
-    width: 600px;
-    height: 30px;
+    width: 540px;
+    height: 100px;
+    text-align: right;
+    font-size: 502px;
 }
 
 button{
     width:80px;
     height: 80px;
+}
+
+/* footer --------------- */
+
+footer{
+    margin-top: 5em;
+    background-color:black;
+    padding: 50px 0px 30px 0px;
+    text-align: center;
+    font-size: 20px;
+}
+
+a{
+   text-decoration: none;
+   color:aliceblue
 }
