--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
-body{
-    background-color: grey;
+*{
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
 
+body{
+    background-color: grey;
+    margin: 0px;
+    padding: 0px;
+    min-width: 100vh;
+    min-height: 100vh;
+
+}
+
 header{
-    background-color: ;
+    /* background-color: black; */
     padding: 30px 0px 30px 0px;
     box-sizing: border-box;
 }
@@ -16,40 +25,95 @@ h1{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.main{
+    display: flex;
+    justify-content: center;
+    align-items:stretch;
+}
+
 
 .calculatorBody{
-    width: 600px;
-    height: 600px;
+    background-color: cadetblue;
+    border: 3px solid black;
+    border-radius: 10px;
+    padding: 20px;
+    width: 350px;
+    height: 495px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+
+
+}
+
+/* screen - start ======= */
+
+.screen{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+}
 
+input{ 
+    background-color: bisque;
+    width: 99%;
+    height: 100px;
+    text-align: right;
+    font-size: 50px;
+    padding: 20px;
+    margin-bottom: 4px;
+    border: 3px solid black;
+    border-radius: 10px;
+    
 }
+
+/* screen - end ======= */
 /* ---- calculator BUttons */
-.screen{
-    b
-}
 
 #ac{
-    height: 500px
+    font-size: 14px;
+    
+
+
 }
 .num{
     height: 500px;
     width: 300px;
 }
 
-input{
-    background-color: bisque;
-    width: 540px;
-    height: 100px;
-    text-align: right;
-    font-size: 502px;
+/* input css property */
+.top-btn{
+    display: flex;
+    gap:5px;
+    justify-content: space-between;
+    margin-top: 5px;
+}
+
+.topstf{
+   
+    margin-bottom: 3px;
+    flex:1;
+    height: 50px;
+}
+
+.top{
+    margin-top: 5px;
+    height: 280px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto auto auto;
+    gap: 5px;
 }
 
 button{
-    width:80px;
-    height: 80px;
+    font-size: 16px;
+    font-style: oblique;
+    font-weight: 700;
+    background-color: grey;
+    border: 3px solid black;
+    border-radius: 10px;
 }
 
 /* footer --------------- */
